# GeneTrajectory-python

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build_and_test.yml  publish-release.yml  publish-to-test-pypi.yml
docs/: _config.yml  _toc.yml  index.md  references.bib  references.md  requirements.txt
docs/notebooks/: tutorial_human_myeloid.ipynb  tutorial_mouse_dermal.ipynb
gene_trajectories/: coarse_grain.py  diffusion_map.py  extract_gene_trajectory.py  gene_distance_calculate.py  gene_distance_shared.py  get_graph_distance.py  run_dm.py
gene_trajectories/plot/: gene_trajectory_plots.py
gene_trajectories/util/: shared_array.py
gene_trajectory/: add_gene_bin_score.py  coarse_grain.py  compute_gene_distance_cmd.py  diffusion_map.py  extract_gene_trajectory.py  gene_distance_shared.py  get_graph_distance.py  run_dm.py
gene_trajectory/plot/: gene_trajectory_plots.py
gene_trajectory/util/: download_file.py  input_validation.py  shared_array.py
gene_trajectory/widgets/: __init__.py  extract_gene_trajectory_widget.py
notebooks/: exploratory_stuff.ipynb  tutorial_e14.ipynb  tutorial_human_myeloid.ipynb
test/: example_data.py  test_add_gene_bin_score.py  test_coarse_grain.py  test_compute_gene_distance_cmd.py  test_diffusion_map.py  test_extract_gene_trajectory.py  test_gene_distance_shared.py  test_get_graph_distance.py  test_run_dm.py
tests/: example_data.py  test_add_gene_bin_score.py  test_coarse_grain.py  test_compute_gene_distance_cmd.py  test_extract_gene_trajectory.py  test_gene_distance_shared.py  test_get_graph_distance.py  test_input_validation.py  test_run_dm.py
