[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gene-trajectory"
version = "1.0.0"
description = "Compute gene trajectories"
license = {file = "LICENSE"}
readme = "README.md"

authors = [
    {name = "Francesco Strino", email = "francesco.strino@pcmgf.com"},
    {name = "Rihao Qu", email = "rihao.qu@yale.edu"},
]
maintainers = [
    {name = "Francesco Strino", email = "francesco.strino@pcmgf.com"},
    {name = "Rihao Qu", email = "rihao.qu@yale.edu"},
]

keywords = ["Gene trajectory", "scRNA-seq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
]

requires-python = ">=3.9"
dependencies = [
    "igraph>=0.10",
    "matplotlib>=3.6",
    "numpy>=1.23",
    "pandas>=1.5",
    "pot>=0.8.2",
    "scanpy>=1.9.3",
    "scikit-misc>=0.1.3",
    "scikit-learn>=0.24",
    "scipy>=1.8",
    "seaborn>=0.13",
    "tqdm>=4.64.1",
]

[project.optional-dependencies]
dev = ["pytest", "twine"]


[project.urls]
Documentation = "https://github.com/KlugerLab/GeneTrajectory-python.git"
Repository = "https://github.com/KlugerLab/GeneTrajectory-python.git"
"Bug Tracker" = "https://github.com/KlugerLab/GeneTrajectory-python/issues"
