[metadata]
name = gene-trajectory
version = 1.0

[options]
packages = find:
python_requires = >=3.9
install_requires =
    igraph>=0.10
    matplotlib>=3.6
    numpy>=1.23
    pandas>=1.5
    pot>=0.8.2
    scanpy>=1.9.3
    scikit-misc>=0.1.3
    scikit-learn>=0.24
    scipy>=1.8
    seaborn>=0.13
    tqdm>=4.64.1

[flake8]
per-file-ignores =
    */__init__.py: F401
